wuhu/prod/navidrome/navidrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: navidrome
  name: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: navidrome
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: navidrome
    spec:
      containers:
        - image: deluan/navidrome:latest
          name: navidrome
          ports:
            - containerPort: 4533
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: navidrome-claim0
            - mountPath: /music
              name: navidrome-claim1
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: navidrome-claim0
          persistentVolumeClaim:
            claimName: navidrome-claim0
        - name: navidrome-claim1
          persistentVolumeClaim:
            claimName: navidrome-claim1
            readOnly: true
