wuhu/prod/navidrome/navidrome-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: navidrome
  name: navidrome
spec:
  ports:
    - name: "4533"
      port: 4533
      targetPort: 4533
  selector:
    io.kompose.service: navidrome
